--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@typescript-eslint/parser": "^6.13.1",
     "axios": "^1.6.2",
     "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
+    "eslint-config-next": "^14.0.3",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "pnpm": "^8.7.6",
